# MIEMsense

./: .gitignore  CMakeLists.txt  README.md
docs/html/: _s_d_k_8cpp.html  _s_d_k_8cpp.js  _s_d_k_8cpp_source.html  _s_d_k_8h.html  _s_d_k_8h.js  _s_d_k_8h_source.html  annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_func.html  globals_vars.html  index.html  main_8cpp.html  main_8cpp.js  main_8cpp_source.html  math_8cpp.html  math_8cpp.js  math_8cpp_source.html  math_8h.html  math_8h.js  math_8h_source.html  navtreedata.js  navtreeindex0.js  struct_c_s___view-members.html  struct_c_s___view.html  struct_c_s___view.js  struct_e_s_pbox-members.html  struct_e_s_pbox.html  struct_e_s_pbox.js  struct_player_info-members.html  struct_player_info.html  struct_player_info.js  (+10 more)
docs/html/search/: all_1.js  all_10.js  all_12.js  all_2.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_1.js  functions_0.js  functions_1.js  functions_3.js  searchdata.js  variables_0.js  variables_2.js  variables_3.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  variables_a.js  variables_b.js  (+2 more)
src/: CMakeLists.txt  SDK.cpp  SDK.h  main.cpp  math.cpp  math.h  structs.h
tests/: CMakeLists.txt  tests.cpp
